# witd

./: .gitignore  Cargo.toml  README.md  raspbuild  rasplinker  witd-arm
.cargo/: config
libwit/: Cargo.toml  README.md  build_c.sh
libwit/example/: build.sh  test.c
libwit/include/: wit.h
libwit/src/: c.rs  client.rs  cmd.rs  lib.rs  mic.rs  wit.rs
src/: connector.rs  main.rs  mic.rs  wit.rs  wit_client.rs  wit_server.rs
