[package]

name = "witd"
version = "0.0.1"
authors = ["martin <martin@wit.ai", "oliv <oliv@wit.ai>", "willy <willy@wit.ai>"]

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.time]
git = "https://github.com/rust-lang/time"

[dependencies.libwit]
git = "https://github.com/wit-ai/libwit.git"
