[package]
name = "libwit"
version = "0.0.1"
authors = ["martin <martin@wit.ai", "oliv <oliv@wit.ai>", "willy <willy@wit.ai>"]

[lib]
name = "wit"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies.curl]
git = "https://github.com/carllerche/curl-rust.git"

[dependencies.url]
git = "https://github.com/servo/rust-url.git"
